--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,12 @@
 # HTML
+- task: SonarQubePrepare@5
+  inputs:
+    SonarQube: 'trial'
+    scannerMode: 'CLI'
+    configMode: 'manual'
+    cliProjectKey: 'Financial-literacy-program-for-kids'
+    cliProjectName: 'Financial-literacy-program-for-kids'
+    cliSources: '.'
 # Archive your static HTML project and save it with the build record.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
