Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -25,3 +25,4 @@ steps:
     cliProjectKey: 'Financial-literacy-program-for-kids'
     cliProjectName: 'Financial-literacy-program-for-kids'
     cliSources: '.'
+- task: SonarQubeAnalyze@5
